# vklite

./: .gitignore  CMakeLists.txt  README.md  build-android.cmd  build-windows.cmd  build_windows.ps1
cmake/: utils.cmake  (+4 more)
src/: CMakeLists.txt
src/engine/: engines.h
src/engine/compute_graphic_engine/: AndroidComputeGraphicEngineBuilder.cpp  AndroidComputeGraphicEngineBuilder.h  ComputeGraphicEngine.cpp  ComputeGraphicEngineBuilder.cpp
src/engine/device_engine/: AndroidDeviceEngineBuilder.h
src/engine/graphic_pipeline_engine/: AndroidGraphicPipelineEngineBuilder.cpp  AndroidGraphicPipelineEngineBuilder.h  GraphicPipelineEngine.cpp
src/vklite/: CMakeLists.txt  Log.h  vklite.h  vklite_windows.h
src/vklite/buffer/: Buffer.cpp
src/vklite/buffer/combined_memory_buffer/: CombinedMemoryBuffer.h
src/vklite/buffer/device_local/: DeviceLocalBuffer.cpp  DeviceLocalBufferBuilder.cpp
src/vklite/buffer/host_visible/: HostVisibleBuffer.cpp  HostVisibleBuffer.h  HostVisibleBufferBuilder.cpp
src/vklite/buffer/index_buffer/: IndexBufferBuilder.cpp
src/vklite/buffer/staging_buffer/: StagingBuffer.cpp  StagingBuffer.h  StagingBufferBuilder.cpp
src/vklite/buffer/storage_buffer/: StorageBuffer.cpp  StorageBuffer.h  StorageBufferBuilder.cpp
src/vklite/buffer/uniform_buffer/: UniformBufferBuilder.cpp
src/vklite/buffer/vertex_buffer/: VertexBufferBuilder.cpp
src/vklite/command_buffer/: CommandBuffer.cpp  CommandBufferInterface.h  CommandBuffers.cpp
src/vklite/command_pool/: CommandPool.cpp
src/vklite/device/: Device.cpp  DeviceBuilder.cpp  DeviceBuilder.h  Queue.cpp
src/vklite/device_memory/: DeviceMemory.cpp  DeviceMemory.h
src/vklite/frame_buffer/: Framebuffer.cpp
src/vklite/image/: Image.cpp  ImageBuilder.cpp
src/vklite/image_view/: ImageView.cpp
src/vklite/image_view/combined_image_view/: CombinedImageViewBuilder.cpp
src/vklite/instance/: Instance.cpp  InstanceApi.cpp  InstanceApi.h  InstanceBuilder.cpp  InstanceBuilder.h
src/vklite/physical_device/: PhysicalDevice.cpp
src/vklite/pipeline/descriptor/: DescriptorBindingConfigure.cpp  DescriptorConfigure.cpp  DescriptorConfigure.h  DescriptorSetConfigure.cpp
src/vklite/pipeline/descriptor_set_layout/: DescriptorSetLayout.cpp  DescriptorSetLayouts.cpp  DescriptorSetLayouts.h
src/vklite/pipeline/descriptor_set_writer/: DescriptorMapping.cpp
src/vklite/pipeline/pipeline/: Pipeline.cpp
src/vklite/pipeline/shader/: ShaderConfigure.cpp
src/vklite/pipeline/shader_module/: ShaderModule.cpp
src/vklite/pipeline/vertex/: VertexBindingConfigure.cpp  VertexBindingConfigure.h
src/vklite/platform/android/api/: VulkanAndroidApi.cpp  VulkanAndroidApi.h
src/vklite/plugin/debug/: DebugPlugin.cpp
src/vklite/plugin/surface/: SurfacePlugin.cpp
src/vklite/plugin/validation/: ValidationPlugin.cpp  ValidationPlugin.h
src/vklite/push_constant/: PushConstant.cpp
src/vklite/render_pass/: RenderPass.cpp  RenderPass.h  RenderPassBuilder.cpp
src/vklite/render_pass/attachment/: Attachment.cpp  Attachment.h
src/vklite/render_pass/subpass/: Subpass.cpp  Subpass.h  SubpassDescription.cpp  SubpassDescription.h
src/vklite/sampler/: Sampler.cpp  SamplerBuilder.cpp
src/vklite/sampler/combined_sampler/: CombinedImageSamplerBuilder.cpp  CombinedImageSamplerBuilder.h
src/vklite/surface/: Surface.cpp
src/vklite/swapchain/: Swapchain.cpp  SwapchainBuilder.cpp
src/vklite/sync/fence/: Fence.cpp
src/vklite/sync/semaphore/: Semaphore.cpp
src/vklite/util/: VulkanUtil.cpp
src/vklite/util/selector/: MaxUint32Selector.cpp
src/vklite_engine/: CMakeLists.txt  engines.h
src/vklite_engine/compute_graphic_engine/: AndroidComputeGraphicEngineBuilder.h  ComputeGraphicEngine.h  ComputeGraphicEngineBuilder.cpp  ComputeGraphicEngineBuilder.h  WindowsComputeGraphicEngineBuilder.cpp  WindowsComputeGraphicEngineBuilder.h
src/vklite_engine/device_engine/: AndroidDeviceEngineBuilder.cpp  AndroidDeviceEngineBuilder.h  DeviceEngine.cpp  DeviceEngineBuilder.cpp  DeviceEngineBuilder.h
src/vklite_engine/graphic_pipeline_engine/: AndroidGraphicPipelineEngineBuilder.h  GraphicPipelineEngineBuilder.cpp  WindowsGraphicPipelineEngineBuilder.cpp  WindowsGraphicPipelineEngineBuilder.h
test/: CMakeLists.txt
test/common/: CMakeLists.txt  Sandbox.cpp  TestBase.h
test/common/image/: CMakeLists.txt
test/common/math/: CMakeLists.txt
test/common/model/: CMakeLists.txt
test/image/: CMakeLists.txt
test/math/: CMakeLists.txt
test/model/: CMakeLists.txt  Vertex.h
test/spv/: 01_triangle.vert.spv  05_texture_image.frag.spv  05_texture_image.vert.spv  09_face_image_detection_03_points.vert.spv  10_ndk_camera_face_detection_00_preprocess.comp.spv  10_ndk_camera_face_detection_01_preview.frag.spv  10_ndk_camera_face_detection_01_preview.vert.spv  10_ndk_camera_face_detection_02_lines.vert.spv
test/test01/: CMakeLists.txt  Test01.cpp  Test01.h  main.cpp
test/test01_simple_triangle/: CMakeLists.txt  Test01.cpp  Test01.h  compile-shaders.cmd
test/test01_simple_triangle/resource/: resource.txt
test/test01_simple_triangle/src/: Test01.cpp  Test01.h  main.cpp
test/test02/: Test02.cpp  Test02.h  test02.cpp  test02.h
test/test02_single_color_triangle/: CMakeLists.txt  Test02.cpp  Test02.h  main.cpp
test/test02_single_color_triangle/resource/: compile-shaders.cmd
test/test02_single_color_triangle/src/: Test02.cpp  Test02.h
test/test03_colored_triangle/: CMakeLists.txt  Test03.cpp  Test03.h  main.cpp
test/test03_colored_triangle/src/: Test03.cpp  Test03.h
test/test04_mvp_matrix/: CMakeLists.txt  Test04.cpp  Test04.h  main.cpp
test/test04_mvp_matrix/resource/spv/: 04_mvp_matrix.vert.spv
test/test04_mvp_matrix/src/: Test04.cpp  Test04.h
test/test05_texture_image/: CMakeLists.txt  Test05.cpp  Test05.h  main.cpp
test/test05_texture_image/src/: Test05.cpp  Test05.h
test/test06_load_3d_model/: CMakeLists.txt  Test06.cpp  Test06.h  main.cpp
test/test06_load_3d_model/resource/spv/: 06_load_3d_model.vert.spv
test/test07_compute_shader/: CMakeLists.txt  Test07.cpp  Test07.h  main.cpp
test/util/: CMakeLists.txt
(+47 files in other folders)
